--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  shared_preferences: ^0.5.4+1
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
